2009-07-18  Ulrich Drepper  <drepper@redhat.com>

	* tst-sem5.c (do_test): Add test for premature timeout.
	* Makefile: Linu tst-sem5 with librt.

	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_timedwrlock.S
	(pthread_rwlock_timedwrlock): If possible use FUTEX_WAIT_BITSET to
	directly use absolute timeout.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_timedrdlock.S
	(pthread_rwlock_timedrdlock): Likewise.

	* tst-cond11.c (run_test): Add test to check that the timeout is
	long enough.

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__pthread_cond_timedwait): If possible use FUTEX_WAIT_BITSET to
	directly use absolute timeout.

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__pthread_cond_wait): Convert to using exception handler instead of
	registered unwind buffer.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Likewise.

2009-07-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sem_timedwait.S (sem_timedwait):
	If possible use FUTEX_WAIT_BITSET|FUTEX_CLOCK_REALTIME to directly
	use absolute timeout.

	* sysdeps/unix/sysv/linux/x86_64/sem_wait.S (sem_wait): Optimize
	handling of uncontested semaphore.

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__condvar_cleanup): Rewrite to use cfi directives instead of
	hand-coded unwind tables.
	* sysdeps/unix/sysv/linux/x86_64/pthread_once.S (__pthread_once):
	Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sem_wait.S (sem_wait): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sem_timedwait.S (sem_timedwait):
	Likewise.

2009-06-12  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (libpthread-routines): Add pthread_sigqueue.
	* Versions: Add pthread_sigqueue for GLIBC_2.11.
	* sysdeps/pthread/bits/sigthread.h: Declare pthread_sigqueue.
	* sysdeps/unix/sysv/linux/pthread_sigqueue.c: New file.

2009-06-11  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10262]
	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S